# LSI

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.md  Dockerfile  README.md  docker-bake.hcl  lsi.py  pyproject.toml  setup.cfg
ci/: test_lsi.py
documentation/: LSI_LULC-Conversion-Table.xlsx  example_reclass_eu_global.xlsx
lsi/: __init__.py  launch_lsi.sh  lsi_cli.py  lsi_core.py  lsi_ftep.py  sertit.Lsi.pyt.xml  sertit.pyt  sertit.pyt.xml
lsi/src/: lsi_calculator.py  reclass.py  utils.py
