[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lsi*"]

[tool.setuptools.package-data]
lsi = ["esri/help/gp/messages/*.xml", "esri/help/gp/toolboxes/*.xml", "esri/arcpy/*.xml", "esri/toolboxes/*.pyt"]

[project]
name = "lsi"
authors = [
    {name = "ICube-SERTIT", email = "dev-sertit@unistra.fr"},
]
description = "SERTIT python project"
readme = "README.md"

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
version = "1.3.3"

dependencies = [
    # Libs for all platforms
    "whitebox-workflows",
    "jenkspy",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "E402"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[project.scripts]
lsi = "rusle.lsi_cli:compute_lsi"
lsi_ftep = "lsi.lsi_ftep:compute_lsi"

# Pytest options
[tool.pytest.ini_options]
log_cli = true
log_cli_format = "%(name)s: %(asctime)s - [%(levelname)s] - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "INFO"
